fix : added z-index

--- a/scss/components/_modals.scss
+++ b/scss/components/_modals.scss
@@ -3,6 +3,7 @@
   position: absolute;
   top: 10vh;
   width: 100%;
+  z-index: 3;
 
   .modal {
     border-radius: 5px;
